@@ -9,7 +9,6 @@
 <script src="../../resources/js-test-pre.js"></script>
 </head>
 <body style="font: 100px Times;">
-<span id="control">&#x26F9;&#xFE0F;</span>
 <span class="testElement">&#x1F468;&zwj;&#x1F466;</span>
 <span class="testElement">&#x1F468;&zwj;&#x1F466;&zwj;&#x1F466;</span>
 <span class="testElement">&#x1F468;&zwj;&#x1F467;</span>
@@ -1075,10 +1074,13 @@
 <span class="testElement">&#x1F93C;&zwj;&#x2642;&#xFE0F;</span>
 <span class="testElement">&#x1F93C;&zwj;&#x2642;</span>
 <script>
-var controlWidth = document.getElementById("control").offsetWidth;
+var controlWidth = 100;
 let elements = document.getElementsByClassName("testElement");
 for (var i = 0; i < elements.length; ++i) {
 	shouldBe("elements[i].offsetWidth", "controlWidth");
+}
+for (var i = 0; i < elements.length; ++i) {
+	elements[i].style.display = "none";
 }
 </script>
 <script src="../../resources/js-test-post.js"></script>
